--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,11 +11,11 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>thesefoolishthings</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>These Foolish Things</name>
 
     <url>http://thesefoolishthings.kenai.com</url>
-    <description></description>
+    <description />
     <organization>
         <name>Tidalwave s.a.s.</name>
         <url>http://www.tidalwave.it</url>
@@ -32,9 +30,9 @@
 -->
 
     <scm>
-        <connection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/trunk/src</connection>
-        <developerConnection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/trunk/src</developerConnection>
-        <url>https://kenai.com/svn/thesefoolishthings~svn/trunk/src</url>
+        <connection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</connection>
+        <developerConnection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</developerConnection>
+        <url>https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</url>
     </scm>
 
     <developers>
