[svn r8] Added the StopWatch module.

--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,7 @@
     **************************************************************************************************************** -->
     <modules>
         <module>SingleLineLogFormatter</module>
+        <module>StopWatch</module>
     </modules>
 
 </project>
