--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 -->
 
     <scm>
-        <connection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</connection>
-        <developerConnection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</developerConnection>
-        <url>https://kenai.com/svn/thesefoolishthings~svn/tags/1.0.0</url>
+        <connection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/trunk/src</connection>
+        <developerConnection>scm:svn:https://kenai.com/svn/thesefoolishthings~svn/trunk/src</developerConnection>
+        <url>https://kenai.com/svn/thesefoolishthings~svn/trunk/src</url>
     </scm>
 
     <developers>
