--- a/pom.xml
+++ b/pom.xml
@@ -78,22 +78,19 @@
         <bundle.namespace>${pom.groupId}.${pom.artifactId}</bundle.namespace>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
     <distributionManagement>
         <repository>
             <id>maven2-repository.tidalwave.kenai.com</id>
-            <name>Tidalwave Maven Repository</name>
-            <url>svn:https://kenai.com/svn/tidalwave~maven-repo/2</url>
+            <name>Tidalwave Maven Release Repository</name>
+            <url>svn:https://kenai.com/svn/tidalwave~maven-repo/release/2</url>
             <uniqueVersion>false</uniqueVersion>
         </repository>
+        <snapshotRepository>
+            <id>maven2-snapshot-repository.tidalwave.kenai.com</id>
+            <name>Tidalwave Maven Snapshot Repository</name>
+            <url>svn:https://kenai.com/svn/tidalwave~maven-repo/snapshot/2</url>
+            <uniqueVersion>true</uniqueVersion>
+        </snapshotRepository>
     </distributionManagement>
 
     <dependencies>
@@ -130,7 +127,7 @@
             <extension>
                 <groupId>org.jvnet.wagon-svn</groupId>
                 <artifactId>wagon-svn</artifactId>
-                <version>1.8</version>
+                <version>1.9</version>
             </extension>
         </extensions>
 
