--- a/StopWatch/pom.xml
+++ b/StopWatch/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0.2-SNAPSHOT</version>
     </parent>
 
-    <groupId>it.tidalwave</groupId>
-    <artifactId>stopwatch</artifactId>
+    <groupId>it.tidalwave.thesefoolishthings</groupId>
+    <artifactId>it.tidalwave.stopwatch</artifactId>
     <packaging>jar</packaging>
     <!-- packaging>nbm</packaging FIXME -->
     <name>StopWatch</name>
