--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>thesefoolishthings</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
     <name>These Foolish Things</name>
 
     <url>http://thesefoolishthings.kenai.com</url>
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it.tidalwave.util.logging</artifactId>
-            <version>1.0.5-SNAPSHOT</version>
+            <version>1.0.5</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
