Configured snapshot repository.

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
         <snapshotRepository>
             <id>maven2-snapshot-repository.tidalwave.kenai.com</id>
             <name>Tidalwave Maven Snapshot Repository</name>
-            <url>svn:https://kenai.com/svn/tidalwave~maven-repo/snapshot/2</url>
+            <url>http://services.tidalwave.it/nexus/content/repositories/snapshots/</url>
             <uniqueVersion>true</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
