Fixed snapshot repository.

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
             <uniqueVersion>false</uniqueVersion>
         </repository>
         <snapshotRepository>
-            <id>maven2-snapshot-repository.tidalwave.kenai.com</id>
+            <id>maven2-snapshot-repository.tidalwave.it</id>
             <name>Tidalwave Maven Snapshot Repository</name>
             <url>http://services.tidalwave.it/nexus/content/repositories/snapshots/</url>
             <uniqueVersion>true</uniqueVersion>
