--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>thesefoolishthings</artifactId>
     <packaging>pom</packaging>
     <version>1.0.6-SNAPSHOT</version>
-    <name>These Foolish Things</name>
+    <name>These Foolish Things (master)</name>
 
     <url>http://thesefoolishthings.kenai.com</url>
     <description />
@@ -81,6 +81,7 @@
         <staging.mvn.repo.url>file://${project.build.directory}/target-maven-repo</staging.mvn.repo.url>
         <buildNumber>unknown</buildNumber>
         <buildNumberSep>.</buildNumberSep>
+        <revision.stamp>.revision</revision.stamp>
     </properties>
 
     <distributionManagement>
@@ -447,12 +448,7 @@
         </profile>
 
         <profile>
-            <id>hg</id>
-            <activation>
-                <file>
-                    <exists>.hg</exists>
-                </file>
-            </activation>
+            <id>generate-revision-id</id>
             <build>
                 <plugins>
                     <plugin>
@@ -460,7 +456,7 @@
                         <artifactId>exec-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>create-hudson-env</id>
+                                <id>create-id</id>
                                 <phase>initialize</phase>
                                 <goals>
                                     <goal>exec</goal>
@@ -472,9 +468,9 @@
                                         <argument>--limit</argument>
                                         <argument>1</argument>
                                         <argument>--template</argument>
-                                        <argument>#!bin/sh\nexport REVISION="{tags} {node|short}"\n</argument>
+                                        <argument>REVISION: {tags} {node|short}\n</argument>
                                     </arguments>
-                                    <outputFile>hudson.env</outputFile>
+                                    <outputFile>${revision.stamp}</outputFile>
                                 </configuration>
                             </execution>
                             <execution>
@@ -490,7 +486,34 @@
                                         <argument>--limit</argument>
                                         <argument>1</argument>
                                         <argument>--template</argument>
-                                        <argument>REVISION {tags} {node|short}\n</argument>
+                                        <argument>REVISION: {tags} {node|short}\n</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>show-revision-id</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>show-revision</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>cat</executable>
+                                    <arguments>
+                                        <argument>${revision.stamp}</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
