--- a/SingleLineLogFormatter/pom.xml
+++ b/SingleLineLogFormatter/pom.xml
@@ -12,7 +12,7 @@
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
     <packaging>nbm</packaging>
-    <name>Single Line Log Formatter</name>
+    <name>TheseFoolishThings - Single Line Log Formatter</name>
 
     <dependencies>
         <!-- These dependencies with 'provided' scope won't be embedded in the .nbm -->
