--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,42 @@
                 <artifactId>it.tidalwave.util.logging</artifactId>
                 <version>1.0.7-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it.tidalwave.beans</artifactId>
+                <version>1.0.7-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
+                <version>1.0.7-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it.tidalwave.util.logging</artifactId>
+                <version>1.0.7-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it.tidalwave.stopwatch</artifactId>
+                <version>1.0.7-SNAPSHOT</version>
+            </dependency>
 
+            <dependency>
+                <groupId>com.kenai.nbpwr</groupId>
+                <artifactId>org-jdesktop-beansbinding</artifactId>
+                <version>1.2.1.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kenai.nbpwr</groupId>
+                <artifactId>net-sf-cglib</artifactId>
+                <version>2.1.3.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kenai.nbpwr</groupId>
+                <artifactId>javax-annotation</artifactId>
+                <version>1.3.7.3</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
@@ -768,8 +803,9 @@
     *
     **************************************************************************************************************** -->
     <modules>
-        <module>SingleLineLogFormatter</module>
+        <module>Beans</module>
         <module>Logger</module>
+        <module>SingleLineLogFormatter</module>
         <module>StopWatch</module>
         <module>Utilities</module>
     </modules>
