--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
                 <version>1.3.7</version>
-            <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
+                <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -158,7 +158,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <extensions>
             <extension>
@@ -234,8 +234,12 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.0-beta-9</version>
                 </plugin>
-
-<!--
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.0-alpha-4</version>
+                </plugin>
+                <!--
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>buildnumber-maven-plugin</artifactId>
@@ -454,6 +458,33 @@
                                         <argument>init</argument>
                                     </arguments>
                                 </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
