--- a/SuperPOM/pom.xml
+++ b/SuperPOM/pom.xml
@@ -52,6 +52,14 @@
 
     <repositories>
         <repository>
+            <id>java.net</id>
+            <name>repository jogl</name>
+            <url>http://download.java.net/maven/2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>netbeans</id>
             <name>NetBeans Platform Maven Repository</name>
             <url>http://bits.netbeans.org/maven2/</url>
@@ -87,11 +95,14 @@
             </snapshots>
         </repository>
         <repository>
-            <id>java.net</id>
-            <name>repository jogl</name>
-            <url>http://download.java.net/maven/2/</url>
-            <snapshots>
+            <id>maven2-snapshot-repository.nbpwr.kenai.com</id>
+            <name>NBPWR Maven Snapshot Repository</name>
+            <url>http://nbpwr.kenai.com/maven-repository/snapshots</url>
+            <releases>
                 <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -107,10 +118,6 @@
             <name>SonaType Snapshot Repository</name>
             <url>http://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
-        <site>
-            <id>website-thesefoolishthings.kenai.com</id>
-            <url>dav:https://kenai.com/website/thesefoolishthings/site/${project.version}</url>
-        </site>
     </distributionManagement>
 
     <dependencyManagement>
@@ -270,7 +277,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Assembler to produce final artifacts. Creates a -bin and -project (source) tarball. -->
+            <!-- Assembler to produce final artifacts. -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
