--- a/SuperPOM/pom.xml
+++ b/SuperPOM/pom.xml
@@ -245,12 +245,18 @@
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>clirr-maven-plugin</artifactId>
+                    <version>2.2.2</version>
+                </plugin>
 
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
                     <version>2.0.1</version>
                 </plugin>
+
             </plugins>
         </pluginManagement>
 
@@ -351,7 +357,6 @@
                 </configuration>
             </plugin>
 
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>nbm-maven-plugin</artifactId>
@@ -361,6 +366,11 @@
                     <brandingToken>${netbeans.brandingToken}</brandingToken>
                     <cluster>${netbeans.cluster}</cluster>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>clirr-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
@@ -791,7 +801,12 @@
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>clirr-maven-plugin</artifactId>
+            </plugin>
         </plugins>
+
     </reporting>
 
 </project>
